@@ -74,6 +74,7 @@ bool linux_swap::create( const Partition & new_partition, OperationDetail & oper
 
 bool linux_swap::resize( const Partition & partition_new, OperationDetail & operationdetail, bool fill_partition )
 {
+	/*TO TRANSLATORS: looks like create new linux-swap filesystem */ 
 	operationdetail .add_child( OperationDetail( 
 		String::ucompose( _("create new %1 filesystem"), Utils::get_filesystem_string( FS_LINUX_SWAP ) ) ) ) ;
 	if ( create( partition_new, operationdetail .get_last_child() ) ) 
