@@ -1,3 +1,10 @@
+2008-09-25  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/GParted_Core.cc,
+	  src/linux_swap.cc,
+	  src/OperationResizeMove.cc,
+	  src/xfs.cc: Add translator comments and fix spelling mistake.
+
 2008-09-24  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/Dialog_Progress.cc: Added proper HTML start and finish.
